# TERRAPYGE

./: .gitignore  ARCHITECTURE.md  DATA_SCHEMA.md  README.md  REPRODUCIBILITY.md  config.yaml  environment.yml  opencode.json  phase1_dem_preprocessing.py  phase1_slope_units.py  pyproject.toml  requirements.txt  setup_project.py  test_installation.py
docs/: COLAB_SETUP.md  GOOGLE_EARTH_ENGINE.md  PROJECT_OVERVIEW.md
models/: gnn_dual_edge.pt
models/ablation/: gat_dual_edge.pt  gat_hydro_only.pt  gat_spatial_only.pt  gcn_dual_edge.pt  gcn_hydro_only.pt  gcn_spatial_only.pt  lr.pkl  sage_hydro_only.pt  sage_spatial_only.pt  xgb.pkl
notebooks/: 01_explore_dem.ipynb  02_preprocess_baseline.ipynb  03_slope_units_extraction_fixed.ipynb  README.md
scripts/: ablation_study.py  compute_hydro_edges.py  generate_hazard_maps.py  phase2_graph_construction.py  run_training.py  setup_project.py
src/terrapyge/data/: acquisition.py  graph.py
src/terrapyge/models/: baselines.py  gnn.py  training.py
src/terrapyge/utils/: __init__.py  geo_utils.py  paths.py
src/utils/: __init__.py  paths.py
src/visualization/: maps.py
tests/: test_installation.py
